--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@emotion/styled": "^11.11.0",
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.13.5",
+    "@nrwl/nx-cloud": "^16.0.5",
     "@playwright/test": "^1.35.0",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
