--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "scripts": {
     "dev": "npm run dev -w app",
     "doc": "start-storybook -p 6006 --no-manager-cache",
-    "build": "npm run build -w packages",
+    "build": "lerna run build",
     "build:doc": "build-storybook --docs -o dist --quiet",
     "build:app": "vite build app",
-    "test": "npm run test -w packages --if-present",
+    "test": "lerna run test",
     "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
     "test:eyes": "npx eyes-storybook -f .config/applitools.config.js",
-    "coverage": "npm run coverage -w packages --if-present",
+    "coverage": "lerna run coverage",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
     "lint:fix": "npm run lint -- --fix",
     "lint-staged": "lint-staged",
-    "typecheck": "npm run typecheck -w packages --if-present",
+    "typecheck": "lerna run typecheck",
     "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
     "publish:release": "lerna publish --conventional-graduate --yes",
     "publish:next": "lerna publish --conventional-prerelease --yes --preid next --dist-tag next",
@@ -74,7 +74,7 @@
     "formik": "^2.4.2",
     "html-react-parser": "^3.0.16",
     "jsdom": "^21.1.2",
-    "lerna": "^6.6.2",
+    "lerna": "^7.1.1",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
     "pa11y-ci": "^3.0.1",
