--- a/app/package.json
+++ b/app/package.json
@@ -3,17 +3,18 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "check": "tsc --noEmit",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hitachivantara/uikit-react-code-editor": "^5.2.18",
-    "@hitachivantara/uikit-react-core": "^5.14.1",
-    "@hitachivantara/uikit-react-icons": "^5.1.11",
-    "@hitachivantara/uikit-styles": "^5.8.1",
+    "@hitachivantara/uikit-react-code-editor": "*",
+    "@hitachivantara/uikit-react-core": "*",
+    "@hitachivantara/uikit-react-icons": "*",
+    "@hitachivantara/uikit-styles": "*",
     "@mui/material": "^5.13.5",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
