--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,13 @@
     "jsxImportSource": "@emotion/react",
     "baseUrl": ".",
     "paths": {
+      "@hitachivantara/uikit-react-code-editor": ["packages/code-editor/src"],
       "@hitachivantara/uikit-react-core": ["packages/core/src"],
-      "@hitachivantara/uikit-react-shared": ["packages/shared/src"],
-      "@hitachivantara/uikit-react-lab": ["packages/lab/src"],
-      "@hitachivantara/uikit-react-viz": ["packages/viz/src"],
       "@hitachivantara/uikit-react-icons": ["packages/icons/bin"],
-      "@hitachivantara/uikit-react-icons/dist/*": ["packages/icons/bin/*"],
-      "@hitachivantara/uikit-styles": ["packages/styles/src"],
-      "@hitachivantara/uikit-react-code-editor": ["packages/code-editor/src"]
+      "@hitachivantara/uikit-react-lab": ["packages/lab/src"],
+      "@hitachivantara/uikit-react-shared": ["packages/shared/src"],
+      "@hitachivantara/uikit-react-viz": ["packages/viz/src"],
+      "@hitachivantara/uikit-styles": ["packages/styles/src"]
     },
     "preserveSymlinks": true,
     "noImplicitAny": false
