--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-ssr-friendly": "^1.2.0",
     "formik": "^2.4.2",
     "html-react-parser": "^3.0.16",
     "jsdom": "^21.1.2",
