--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -26,7 +26,7 @@
     "build": "vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "npm run build && npx clean-publish"
+    "prepublishOnly": "run-s clean build && npx clean-publish"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
