--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@hitachivantara/uikit-styles": "^5.9.1"
   },
   "devDependencies": {
