feat: add useDefaultProps in components

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
   "rules": {
     "arrow-body-style": "off",
     "react/prop-types": "off",
+    "react/no-unused-prop-types": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": [
