--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/builder-vite": "^0.1.29",
     "@storybook/core-common": "^6.5.16",
     "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
