--- a/examples/uikit-vite-ts/package.json
+++ b/examples/uikit-vite-ts/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hitachivantara/uikit-react-core": "latest",
     "@hitachivantara/uikit-react-icons": "latest",
     "@mui/material": "^5.11.10",
@@ -20,8 +21,8 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.4"
+    "@vitejs/plugin-react": "^4.0.4",
+    "typescript": "^4.9.5",
+    "vite": "^4.4.8"
   }
 }
