--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -25,9 +25,9 @@
   "scripts": {
     "prebuild": "npm run convert",
     "build": "vite build",
+    "optimize": "svgo -r -f assets assets",
     "preconvert": "npx rimraf bin",
     "convert": "run-s convert:*",
-    "convert:optimize": "svgo --config=./svgo.config.js -r -f assets assets",
     "convert:svg": "tsx src/svgToReact.ts dir --input assets --output bin --force",
     "convert:copy": "npx cpy \"src/IconBase*\" \"bin\"",
     "clean": "npx rimraf dist bin package",
