feat(Flow): react flow POC

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -39,6 +39,9 @@
       "path": "../packages/viz/tsconfig.json"
     },
     {
+      "path": "../packages/flow/tsconfig.json"
+    },
+    {
       "path": "../packages/code-editor/tsconfig.json"
     }
   ]
