--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "reactflow": "^11.8.3",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
     "vite-plugin-dts": "2.3.0",
