--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@hitachivantara/uikit-react-lab": ["packages/lab/src"],
       "@hitachivantara/uikit-react-shared": ["packages/shared/src"],
       "@hitachivantara/uikit-react-viz": ["packages/viz/src"],
+      "@hitachivantara/uikit-react-flow": ["packages/flow/src"],
       "@hitachivantara/uikit-styles": ["packages/styles/src"]
     },
     "preserveSymlinks": true,
