--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@commitlint/config-conventional": "^17.6.5",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.13.5",
@@ -88,6 +89,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "swr": "^2.2.2",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
     "vite-plugin-dts": "2.3.0",
