--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/leaflet": "^1.9.4",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
@@ -79,6 +80,7 @@
     "formik": "^2.4.2",
     "html-react-parser": "^3.0.16",
     "jsdom": "^21.1.2",
+    "leaflet": "^1.9.4",
     "lerna": "^7.1.1",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
@@ -89,8 +91,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-leaflet": "^4.2.1",
     "swr": "^2.2.2",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "vite": "^4.3.9",
     "vite-plugin-dts": "2.3.0",
     "vite-tsconfig-paths": "^4.2.0",
