--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@applitools/eyes-storybook": "^3.35.0",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
@@ -92,14 +94,17 @@
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-leaflet": "^4.2.1",
+    "reactflow": "^11.8.3",
     "swr": "^2.2.2",
     "typescript": "^4.9.5",
+    "uid": "^2.0.2",
     "usehooks-ts": "^2.9.1",
     "vite": "^4.3.9",
     "vite-plugin-dts": "2.3.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.4.1"
   },
   "husky": {
     "hooks": {
