docs: HV markdown elements & custom DocsPage

--- a/.eslintrc
+++ b/.eslintrc
@@ -105,9 +105,9 @@
     {
       "files": [
         "**/*.stories.ts?(x)",
-        "**/stories/*",
+        "**/stories/**/*",
         "**/*.test.ts?(x)",
-        "**/test/*",
+        "**/test/**/*",
         "**/templates/**/*.ts?(x)"
       ],
       "rules": {
