--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "npm run dev -w app",
-    "doc": "start-storybook -p 6006 --no-manager-cache",
+    "doc": "storybook dev -p 6006",
     "build": "lerna run build",
-    "build:doc": "build-storybook --docs -o dist --quiet",
+    "build:doc": "storybook build --docs -o dist --quiet",
     "build:app": "vite build app",
     "test": "lerna run test",
     "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
@@ -35,7 +35,7 @@
     "prepare": "npx husky install .config/husky"
   },
   "devDependencies": {
-    "@applitools/eyes-storybook": "^3.35.0",
+    "@applitools/eyes-storybook": "^3.41.2",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@dnd-kit/core": "^6.0.8",
@@ -44,15 +44,15 @@
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.13.5",
     "@playwright/test": "^1.35.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.1.29",
-    "@storybook/core-common": "^6.5.16",
-    "@storybook/react": "^6.5.16",
+    "@storybook/addon-a11y": "^7.4.1",
+    "@storybook/addon-essentials": "^7.4.1",
+    "@storybook/addon-links": "^7.4.1",
+    "@storybook/core-common": "^7.4.1",
+    "@storybook/react": "^7.4.1",
+    "@storybook/react-vite": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -95,6 +95,8 @@
     "react-google-charts": "^4.0.0",
     "react-leaflet": "^4.2.1",
     "reactflow": "^11.8.3",
+    "remark-gfm": "^3.0.1",
+    "storybook": "^7.4.1",
     "swr": "^2.2.2",
     "typescript": "^4.9.5",
     "uid": "^2.0.2",
