--- a/.github/workflows/tests-a11y.yml
+++ b/.github/workflows/tests-a11y.yml
@@ -1,4 +1,4 @@
-name: Pa11y
+name: a11y
 
 on:
   workflow_dispatch:
@@ -29,14 +29,14 @@ jobs:
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
           "npx http-server dist --port 6006 --silent" \
-          "npx wait-on tcp:6006 && npm run test:pa11y" || true
+          "npx wait-on tcp:6006 && npm run test:a11y" || true
 
-      - name: Archive pa11y report
+      - name: Archive a11y report
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: pa11y-report
-          path: ${{ github.workspace }}/pa11y-ci-report
+          name: a11y-report
+          path: ${{ github.workspace }}/a11y-report
           retention-days: 2
 
       - name: Deploy Artifacts
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
           PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-          PUBLISH_FOLDER: uikit-pa11y
+          PUBLISH_FOLDER: uikit-a11y
           PUBLISH_MESSAGE: "chore: publish NEXT UI Kit accessibility report"
-          URL: https://${{ github.repository_owner }}.github.io/uikit-pa11y/
-          ARTIFACT: pa11y-report
+          URL: https://${{ github.repository_owner }}.github.io/uikit-a11y/
+          ARTIFACT: a11y-report
