--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:doc": "storybook build --docs -o dist --quiet",
     "build:app": "vite build app",
     "test": "lerna run test",
-    "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
+    "test:a11y": "node scripts/a11y-report",
     "test:eyes": "npx eyes-storybook -f .config/applitools.config.js",
     "coverage": "lerna run coverage",
     "prettier": "prettier --check .",
@@ -86,8 +86,6 @@
     "lerna": "^7.1.1",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
-    "pa11y-ci": "^3.0.1",
-    "pa11y-ci-reporter-html": "^5.1.1",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
@@ -97,6 +95,7 @@
     "reactflow": "^11.8.3",
     "remark-gfm": "^3.0.1",
     "storybook": "^7.4.1",
+    "storybook-a11y-report": "^0.0.20",
     "swr": "^2.2.2",
     "typescript": "^4.9.5",
     "uid": "^2.0.2",
