--- a/app/package.json
+++ b/app/package.json
@@ -39,11 +39,13 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
+    "@hitachivantara/uikit-uno-preset": "*",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "@vitejs/plugin-react": "^4.1.1",
     "typescript": "^4.9.5",
+    "unocss": "^0.57.7",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0"
   }
