chore: simple select with downshift and radix

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.13.5",
     "@playwright/test": "^1.35.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@storybook/addon-a11y": "^7.4.1",
     "@storybook/addon-essentials": "^7.4.1",
     "@storybook/addon-links": "^7.4.1",
@@ -67,6 +68,7 @@
     "arquero": "^5.2.0",
     "clean-publish": "^4.2.0",
     "clsx": "^1.2.1",
+    "downshift": "^8.2.2",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "eslint": "^8.42.0",
