--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,6 +50,7 @@
     "@internationalized/date": "^3.2.0",
     "@mui/base": "^5.0.0-beta.4",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-popover": "^1.0.7",
     "@react-aria/datepicker": "^3.4.1",
     "@react-stately/datepicker": "^3.4.1",
     "@types/react-table": "^7.7.14",
@@ -57,6 +58,7 @@
     "clsx": "^1.2.1",
     "dayjs": "^1.11.8",
     "detect-browser": "^5.3.0",
+    "downshift": "^8.2.2",
     "embla-carousel-react": "^8.0.0-rc07",
     "lodash": "^4.17.21",
     "notistack": "^2.0.8",
