--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "publish:test": "lerna publish --conventional-graduate --yes --no-git-tag-version --no-push",
     "publish:release": "lerna publish --conventional-graduate --yes",
     "publish:next": "lerna publish --conventional-prerelease --yes --preid next --dist-tag next",
-    "prepare": "npx husky install .config/husky"
+    "prepare": "npx husky install .config/husky",
+    "lab:flow": "node scripts/flow-styles"
   },
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.41.2",
