--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "dist",
     // "noImplicitAny": true,
     "paths": {
-      "@core/*": ["./*"]
+      "@core/*": ["./*"],
+      "@viz/*": ["../../viz/src/*"]
     }
   },
   "include": ["src"]
