--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -40,8 +40,7 @@
     "@hitachivantara/uikit-react-core": "^5.32.0",
     "@hitachivantara/uikit-react-icons": "^5.6.10",
     "@hitachivantara/uikit-styles": "^5.14.0",
-    "@monaco-editor/react": "^4.5.1",
-    "clsx": "^1.2.1"
+    "@monaco-editor/react": "^4.5.1"
   },
   "devDependencies": {
     "@storybook/react": "^7.4.1",
