chore: import order configured in eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -85,6 +85,39 @@
       }
     ],
     "import/no-cycle": "error",
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          ["parent", "sibling", "index"]
+        ],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "@hitachivantara/**",
+            "group": "external"
+          },
+          {
+            "pattern": "@core/**",
+            "group": "internal"
+          },
+          {
+            "pattern": "@viz/**",
+            "group": "internal"
+          }
+        ],
+        "distinctGroup": false,
+        "pathGroupsExcludedImportTypes": ["builtin", "object"],
+        "newlines-between": "always-and-inside-groups"
+      }
+    ],
     // TODO: review this
     "react/no-array-index-key": "off",
     "no-restricted-syntax": "off", // loops are fine?
