--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "ESNext",
-    "target": "ES2015",
-    "lib": ["DOM", "ESNext", "dom.iterable"],
+    "target": "ES2021",
+    "lib": ["DOM", "ES2021", "dom.iterable"],
     "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "esModuleInterop": true,
