--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@commitlint/config-conventional": "^17.6.5",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
