--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,6 +49,7 @@
     "@hitachivantara/uikit-styles": "^5.16.0",
     "@internationalized/date": "^3.2.0",
     "@mui/base": "^5.0.0-beta.4",
+    "@mui/x-tree-view": "6.0.0-beta.0",
     "@popperjs/core": "^2.11.8",
     "@react-aria/datepicker": "^3.4.1",
     "@react-stately/datepicker": "^3.4.1",
