chore: flow added to app

--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,12 @@
     "@hitachivantara/uikit-react-code-editor": "*",
     "@hitachivantara/uikit-react-core": "*",
     "@hitachivantara/uikit-react-icons": "*",
+    "@hitachivantara/uikit-react-lab": "*",
+    "@hitachivantara/uikit-react-viz": "*",
     "@hitachivantara/uikit-styles": "*",
     "@mui/material": "^5.13.5",
+    "@types/react-grid-layout": "^1.3.4",
+    "arquero": "^5.2.0",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
     "i18next": "^22.5.1",
@@ -26,8 +30,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-grid-layout": "^1.4.2",
     "react-i18next": "^12.3.1",
     "react-router-dom": "^6.13.0",
+    "reactflow": "^11.9.4",
+    "swr": "^2.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
