chore(Icons): improve color types & generation
- add color completions
- reduce size from 109kB to 38kB

--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -4,13 +4,7 @@
     "composite": true,
     "baseUrl": "bin",
     "rootDir": "bin",
-    "outDir": "dist",
-    "allowJs": true
+    "outDir": "dist"
   },
-  "include": ["bin"],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "CommonJS"
-    }
-  }
+  "include": ["bin"]
 }
