--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "@types/react-dom": "^18.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
-    "@vitest/coverage-c8": "^0.32.0",
+    "@vitejs/plugin-react": "^4.1.1",
+    "@vitest/coverage-v8": "^0.34.6",
     "arquero": "^5.2.0",
     "clean-publish": "^4.2.0",
     "clsx": "^1.2.1",
@@ -103,7 +104,7 @@
     "uid": "^2.0.2",
     "usehooks-ts": "^2.9.1",
     "vite": "^4.3.9",
-    "vite-plugin-dts": "2.3.0",
+    "vite-plugin-dts": "^3.6.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0",
     "yup": "^1.2.0",
