--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.13.5",
     "@playwright/test": "^1.35.0",
@@ -94,6 +95,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-hook-form": "^7.48.2",
     "react-leaflet": "^4.2.1",
     "reactflow": "^11.9.4",
     "remark-gfm": "^3.0.1",
@@ -107,7 +109,8 @@
     "vite-plugin-dts": "^3.6.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0",
-    "yup": "^1.2.0",
+    "yup": "^1.3.2",
+    "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
   "husky": {
