chore: vite typings & use import.meta.env
- add vite typing references
- use import.meta.env instead of process.env
- wrap missing console warnings / refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,14 @@
       "@hitachivantara/uikit-styles": ["packages/styles/src"]
     },
     "preserveSymlinks": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": [
+      "node",
+      "jest",
+      "@testing-library/jest-dom",
+      "vite/client",
+      "vitest"
+    ]
   },
   "exclude": ["node_modules", "dist"]
 }
