--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -47,6 +47,7 @@
     "@hitachivantara/uikit-react-icons": "^5.7.4",
     "@hitachivantara/uikit-styles": "^5.16.2",
     "lodash": "^4.17.21",
+    "react-grid-layout": "^1.4.3",
     "reactflow": "^11.9.4",
     "uid": "^2.0.2",
     "usehooks-ts": "^2.9.1",
@@ -59,6 +60,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/react-grid-layout": "^1.3.5",
     "npm-run-all": "^4.1.5",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
