--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "baseUrl": ".",
-    "paths": {
-      "@hitachivantara/uikit-react-code-editor": ["packages/code-editor/src"],
-      "@hitachivantara/uikit-react-core": ["packages/core/src"],
-      "@hitachivantara/uikit-react-icons": ["packages/icons/bin"],
-      "@hitachivantara/uikit-react-lab": ["packages/lab/src"],
-      "@hitachivantara/uikit-react-shared": ["packages/shared/src"],
-      "@hitachivantara/uikit-react-viz": ["packages/viz/src"],
-      "@hitachivantara/uikit-styles": ["packages/styles/src"]
-    },
+    "paths": {},
     "preserveSymlinks": true,
     "noImplicitAny": false,
     "types": [
