--- a/.github/workflows/tests-a11y.yml
+++ b/.github/workflows/tests-a11y.yml
@@ -1,15 +1,24 @@
-name: a11y
+name: A11y Tests
 
 on:
   workflow_dispatch:
   workflow_call:
     secrets:
       ORG_GHPAGES_DEPLOY_KEY:
-        required: true
+        required: false
+    inputs:
+      publish:
+        type: boolean
+        default: false
+        required: false
+      exit:
+        type: boolean
+        default: false
+        required: false
 
 jobs:
   run-tests:
-    name: Run Tests
+    name: A11y Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -29,10 +38,10 @@ jobs:
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
           "npx serve dist -l 6006 -L" \
-          "npx wait-on tcp:6006 && npm run test:a11y" || true
+          "npx wait-on tcp:6006 && npm run test:a11y -- --exit ${{ inputs.exit }}"
 
       - name: Archive a11y report
-        if: always()
+        if: success() || failure()
         uses: actions/upload-artifact@v3
         with:
           name: a11y-report
@@ -40,7 +49,7 @@ jobs:
           retention-days: 2
 
       - name: Deploy Artifacts
-        if: always()
+        if: ${{ inputs.publish == true && (success() || failure()) }}
         uses: ./.github/actions/deploy-artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
