chore: a11y tests added to PR

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,6 +14,8 @@ jobs:
   a11y:
     name: A11y Tests
     uses: ./.github/workflows/tests-a11y.yml
+    with:
+      publish: false
 
   applitools:
     name: Applitools
