--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -26,7 +26,9 @@
     "@unocss/preset-uno": ">= 0.57.7"
   },
   "dependencies": {
-    "@hitachivantara/uikit-styles": "^5.16.3"
+    "@hitachivantara/uikit-styles": "^5.16.3",
+    "@unocss/preset-rem-to-px": "^0.57.7",
+    "unocss-preset-theme": "^0.11.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
