chore: fix workflow

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,13 +1,14 @@
 name: Documentation
+run-name: v4.x Documentation
 on:
   workflow_dispatch:
 
 env:
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
   DOCUMENTATION_PUBLISH_BRANCH: master
-  DOCUMENTATION_PUBLISH_FOLDER: uikit/master
-  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for master of ${{ github.repository }}"
-  DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/master/
+  DOCUMENTATION_PUBLISH_FOLDER: uikit/v4.x
+  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for v4.x of ${{ github.repository }}"
+  DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/v4.x/
 
 jobs:
   Release:
