chore(icons): simplify conversion & improve docs
- always write files
- fix docs on folders
- remove dead code

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -29,8 +29,8 @@
     "optimize": "svgo -r -f assets assets",
     "preconvert": "npx rimraf src",
     "convert": "run-s convert:*",
-    "convert:svg": "tsx scripts/svgToReact.ts dir --input assets --output src --force",
-    "convert:sprites": "tsx scripts/svgToSprite.ts dir --input assets --output sprites --force",
+    "convert:svg": "tsx scripts/svgToReact.ts dir --input assets --output src",
+    "convert:sprites": "tsx scripts/svgToSprite.ts dir --input assets --output sprites",
     "convert:copy": "npx cpy \"lib/*\" \"src\"",
     "clean": "npx rimraf dist src sprites package",
     "prepare": "npm run convert",
