--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-ssr-friendly": "^1.3.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "formik": "^2.4.5",
     "html-react-parser": "^3.0.16",
     "jsdom": "^21.1.2",
