--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,19 @@
-{}
+{
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "@ianvs/prettier-plugin-sort-imports"
+  ],
+
+  "importOrder": [
+    "<BUILTIN_MODULES>",
+    "^react$",
+    "^react-.*",
+    "<THIRD_PARTY_MODULES>",
+    "^@hitachivantara/(.*)$",
+    "",
+    "^~/(.*)$",
+    "",
+    "^[./]"
+  ],
+  "importOrderTypeScriptVersion": "4.9.5"
+}
