--- a/apps/app/.eslintrc
+++ b/apps/app/.eslintrc
@@ -3,30 +3,6 @@
     "no-alert": "off",
     "no-console": "off",
     "import/extensions": "off",
-    "import/order": [
-      "error",
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          ["parent", "sibling", "index"]
-        ],
-        "pathGroups": [
-          {
-            "pattern": "react",
-            "group": "external",
-            "position": "before"
-          },
-          {
-            "pattern": "~/**",
-            "group": "internal"
-          }
-        ],
-        "distinctGroup": false,
-        "pathGroupsExcludedImportTypes": ["builtin", "object"],
-        "newlines-between": "always-and-inside-groups"
-      }
-    ]
+    "import/order": "off"
   }
 }
