--- a/.github/workflows/static-checks.yml
+++ b/.github/workflows/static-checks.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Security Audit
         run: npm audit --workspaces --omit dev
 
+      - name: Run Format
+        run: npm run prettier
+
       - name: Run Lint
         run: npm run lint
 
