--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:a11y": "node scripts/a11y-report",
     "test:eyes": "npx eyes-storybook -f .config/applitools.config.js",
     "coverage": "lerna run coverage",
-    "prettier": "prettier --check .",
+    "check": "npm-run-all --parallel prettier lint typecheck",
+    "prettier": "prettier --log-level warn --check .",
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
     "lint:fix": "npm run lint -- --fix",
@@ -50,6 +51,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
@@ -99,7 +101,8 @@
     "lerna": "^7.4.2",
     "lint-staged": "^13.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
