--- a/.eslintrc
+++ b/.eslintrc
@@ -72,7 +72,7 @@
       "error",
       {
         "devDependencies": [
-          "apps/app/**",
+          "apps/**",
           "docs/**",
           "templates/**",
           "packages/icons/**",
