--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -18,5 +18,5 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["pages", "**/*.tsx"]
+  "include": ["**/*.tsx", "**/*.ts"]
 }
