chore: nextra live codeblock

--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -18,5 +18,5 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.tsx", "**/*.ts"]
+  "include": ["**/*.tsx", "**/*.ts", "next.config.mjs"]
 }
