--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,3 +28,10 @@ jobs:
       ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
     with:
       publish-folder: pr-${{ github.event.number }}
+
+  playwright:
+    name: Playwright
+    needs: artifacts
+    uses: ./.github/workflows/tests-playwright.yml
+    with:
+      publish-folder: pr-${{ github.event.number }}
