--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.14.20",
-    "@playwright/test": "^1.40.1",
+    "@playwright/test": "^1.41.1",
     "@storybook/addon-a11y": "^7.6.4",
     "@storybook/addon-essentials": "^7.6.4",
     "@storybook/addon-links": "^7.6.4",
@@ -65,6 +65,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/leaflet": "^1.9.8",
     "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
