--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -55,6 +55,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.1",
     "@storybook/react": "^7.6.4",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/react": "^14.1.2",
