fix: workflows artifact version

--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Archive Storybook
         uses: actions/upload-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
@@ -60,7 +60,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
