--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Archive Storybook
         uses: actions/upload-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
@@ -102,7 +102,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -155,7 +155,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -226,7 +226,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
