docs: make issue UI Kit version mandatory

--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -15,6 +15,8 @@ body:
         - v3.x
         - v4.x
         - v5.x
+    validations:
+      required: true
   - type: checkboxes
     attributes:
       label: Latest version
